--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 </head>
 <body>
     <div id="message">
-        <h1>Happy New Year, My Love! 🎆❤️</h1>
-        <p>Wishing you a year full of joy, love, and happiness!</p>
+        <h1>Happy New Year, My Source Of Motivation! 🎆❤️</h1>
+        <p>Wishing you a year full of joy, love, health and happiness!</p>
     </div>
     <canvas id="fireworksCanvas"></canvas>
 
